fix: text of cer badge in dark mode

--- a/src/components/study/badge/Badge.css
+++ b/src/components/study/badge/Badge.css
@@ -46,7 +46,7 @@
   }
 
 .badge__link {
-    color: #000000;
+    color: var(--color-text-default);
 }
 
  
